--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "electron-debug": "^0.6.0",
     "font-awesome": "^4.6.1",
     "postcss": "^5.0.19",
+    "johnny-five": "rwaldron/johnny-five",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
