--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
+    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\"",
+    "lint": "eslint . --ext .js --ext .jsx --ignore-path .gitignore --cache; exit 0"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -49,7 +50,7 @@
   "devDependencies": {
     "asar": "^0.11.0",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-webpack-loaders": "^0.4.0",
@@ -69,7 +70,7 @@
     "electron-packager": "^6.0.2",
     "electron-prebuilt": "^1.0.2",
     "electron-rebuild": "^1.1.3",
-    "eslint": "^2.9.0",
+    "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
