--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "eslint-loader": "^1.3.0"
   },
   "dependencies": {
     "css-modules-require-hook": "^4.0.0",
