--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libfoo"]
     path = tools/react-devtools
     url = git@github.com:facebook/react-devtools.git
+[submodule "app/sass"]
+	path = app/sass
+	url = https://github.com/thoughtbot/bourbon
