--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "app/sass/bitters"]
 	path = app/sass/bitters
 	url = git@github.com:thoughtbot/bitters.git
+[submodule "app/sass/refills"]
+	path = app/sass/refills
+	url = git@github.com:thoughtbot/refills.git
