do not lint for complexity anymore

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,13 +12,13 @@
     "consistent-return": 1,
     "comma-dangle": 0,
     "no-cond-assign": 2,
-    "no-dupe-args": 2,    "no-dupe-keys": 2,
+    "no-dupe-args": 2,
+    "no-dupe-keys": 2,
     "no-duplicate-case": 2,
     "no-extra-semi": 1,
     "no-inner-declarations": 1,
     "no-invalid-regexp": 1,
     "no-negated-in-lhs": 2,
-    "complexity": [1, 3],
     "no-else-return": 1,
     "import/no-unresolved": [2, { ignore: ['electron'] }],
     "react/jsx-no-bind": 0,
