--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
     "electron-rebuild": "^1.1.3",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.6.0",
+    "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "jsdom": "^8.4.0",
     "json-loader": "^0.5.4",
@@ -97,8 +99,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "eslint-loader": "^1.3.0"
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "css-modules-require-hook": "^4.0.0",
@@ -116,7 +117,8 @@
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "source-map-support": "^0.4.0"
+    "source-map-support": "^0.4.0",
+    "vis": "^4.16.1"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
