--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "rd3": "^0.6.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-fontawesome": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
