--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "html-loader": "^0.4.3",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.8.0",
     "sass-loader": "^3.2.0",
-    "sinon": "^1.17.3",
+    "sinon": "^1.17.4",
     "del": "^2.2.1",
     "devtron": "^1.2.1",
     "electron-devtools-installer": "^2.0.1",
@@ -94,8 +94,6 @@
     "mocha": "^3.0.0",
     "node-libs-browser": "^1.0.0",
     "react-addons-test-utils": "^15.3.0",
-    "redux-logger": "^2.6.1",
-    "sinon": "^1.17.4",
     "spectron": "^3.2.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
@@ -104,25 +102,26 @@
     "webpack-merge": "^0.14.0"
   },
   "dependencies": {
-    "d3": "^3.5.17",
-    "johnny-five": "rwaldron/johnny-five",
-    "jsonfile": "^2.3.1",
-    "ramda": "^0.21.0",
-    "rd3": "^0.6.3",
-    "react-fontawesome": "^1.1.0",
-    "vis": "^4.16.1",
     "css-modules-require-hook": "^4.0.1",
+    "d3": "^3.5.17",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.6.3",
+    "johnny-five": "rwaldron/johnny-five",
+    "jsonfile": "^2.3.1",
     "postcss": "^5.1.0",
+    "ramda": "^0.21.0",
+    "rd3": "^0.6.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-fontawesome": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.2"
+    "source-map-support": "^0.4.2",
+    "vis": "^4.16.1"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
