Add ino code generation

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
+    "react-syntax-highlighter": "^2.3.0",
     "react-translate-component": "^0.13.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
