Use fixed version of johnny-five

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "d3": "^3.5.17",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.6.3",
-    "johnny-five": "rwaldron/johnny-five",
+    "johnny-five": "0.10.0",
     "jsonfile": "^2.3.1",
     "postcss": "^5.1.0",
     "ramda": "^0.21.0",
@@ -119,6 +119,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
+    "react-split-pane": "^0.1.44",
     "react-syntax-highlighter": "^2.3.0",
     "react-translate-component": "^0.13.0",
     "redux": "^3.5.2",
