--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
@@ -72,12 +71,11 @@
     "node-neat": "^1.7.2",
     "node-sass": "^3.8.0",
     "sass-loader": "^3.2.0",
-    "sinon": "^1.17.4",
     "del": "^2.2.1",
     "devtron": "^1.2.1",
     "electron-devtools-installer": "^2.0.1",
     "electron-packager": "^7.3.0",
-    "electron-prebuilt": "~1.3.3",
+    "electron-prebuilt": "^1.4.3",
     "electron-rebuild": "^1.1.5",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
@@ -91,7 +89,6 @@
     "jsdom": "^9.4.1",
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
-    "mocha": "^3.0.0",
     "node-libs-browser": "^1.0.0",
     "react-addons-test-utils": "^15.3.0",
     "spectron": "^3.2.6",
