--- a/package.json
+++ b/package.json
@@ -2,30 +2,31 @@
   "name": "remotino",
   "productName": "Remotino",
   "version": "0.10.0",
-  "description": "Remotino lets you remote control your Aruino",
+  "description": "Remotino lets you remote control your Arduino",
   "main": "main.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
     "test-watch": "npm test -- --watch",
-    "test-e2e": "cross-env NODE_ENV=test mocha --compilers js:babel-register --require ./test/setup.js ./test/e2e.js",
-    "lint": "eslint app test *.js",
-    "hot-server": "node -r babel-register server.js",
+    "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --require ./test/setup.js ./test/e2e.js",
+    "lint": "eslint --format=node_modules/eslint-formatter-pretty app test *.js",
+    "hot-server": "cross-env NODE_ENV=development node -r babel-register server.js",
     "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./main.development",
-    "package": "cross-env NODE_ENV=production node -r babel-register package.js",
+    "package": "cross-env NODE_ENV=production node -r babel-register -r babel-polyfill package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
+    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\"",
+    "cleanup": "mop -v"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chentsulin/electron-react-boilerplate.git"
+    "url": "git+https://github.com/UniSiegenCSCW/remotino"
   },
   "author": {
     "name": "Julian Dax",
@@ -38,95 +39,102 @@
   },
   "keywords": [
     "electron",
-    "aruino",
-    "react",
-    "react-router",
-    "flux",
-    "webpack",
-    "react-hot"
+    "arduino",
+    "react"
   ],
   "homepage": "https://github.com/UniSiegenCSCW/remotino",
   "devDependencies": {
-    "asar": "^0.12.1",
-    "babel-core": "^6.13.1",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-webpack-loaders": "^0.7.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "concurrently": "^2.2.0",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "eslint-loader": "^1.3.0",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "node-bourbon": "^4.2.8",
-    "node-neat": "^1.7.2",
     "node-sass": "^3.8.0",
     "sass-loader": "^3.2.0",
-    "del": "^2.2.1",
-    "devtron": "^1.2.1",
+    "file-loader": "^0.8.5",
+    "asar": "^0.12.3",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-tcomb": "^0.3.17",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "boiler-room-custodian": "^0.4.2",
+    "chai": "^3.5.0",
+    "concurrently": "^3.1.0",
+    "cross-env": "^3.1.1",
+    "css-loader": "^0.25.0",
+    "del": "^2.2.2",
+    "devtron": "^1.3.0",
+    "electron": "^1.4.3",
     "electron-devtools-installer": "^2.0.1",
-    "electron-packager": "^7.3.0",
-    "electron-prebuilt": "^1.4.3",
-    "electron-rebuild": "^1.1.5",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-import-resolver-webpack": "^0.4.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
+    "electron-packager": "^8.1.0",
+    "electron-rebuild": "^1.2.1",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-formatter-pretty": "^1.0.0",
+    "eslint-import-resolver-webpack": "^0.6.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-flowtype-errors": "^1.3.1",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-mocha": "^4.6.0",
+    "eslint-plugin-react": "^6.3.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
-    "jsdom": "^9.4.1",
+    "jsdom": "^9.6.0",
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
+    "mocha": "^3.1.0",
     "node-libs-browser": "^1.0.0",
-    "react-addons-test-utils": "^15.3.0",
-    "spectron": "^3.2.6",
+    "react-addons-test-utils": "^15.3.2",
+    "redux-logger": "^2.7.0",
+    "sinon": "^1.17.6",
+    "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1",
-    "webpack-merge": "^0.14.0"
+    "tcomb": "^3.2.15",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1",
+    "webpack-validator": "^2.2.9"
   },
   "dependencies": {
     "counterpart": "^0.17.5",
-    "css-modules-require-hook": "^4.0.1",
-    "d3": "^3.5.17",
-    "electron-debug": "^1.0.1",
-    "font-awesome": "^4.6.3",
+    "vis": "^4.16.1",
     "johnny-five": "0.10.0",
-    "jsonfile": "^2.3.1",
-    "postcss": "^5.1.0",
     "ramda": "^0.21.0",
     "rd3": "^0.6.3",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-fontawesome": "^1.1.0",
-    "react-interpolate-component": "^0.10.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
-    "react-router-redux": "^4.0.5",
-    "react-split-pane": "^0.1.44",
+    "d3": "^3.5.17",
     "react-syntax-highlighter": "^2.3.0",
     "react-translate-component": "^0.13.0",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
+    "react-interpolate-component": "^0.10.0",
+    "css-modules-require-hook": "^4.0.1",
+    "electron-debug": "^1.0.1",
+    "react-fontawesome": "^1.1.0",
+    "jsonfile": "^2.3.1",
+    "css-modules-require-hook": "^4.0.5",
+    "electron-debug": "^1.0.1",
+    "font-awesome": "^4.6.3",
+    "postcss": "^5.2.4",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.2",
-    "vis": "^4.16.1"
+    "serialport": "^4.0.3",
+    "source-map-support": "^0.4.3"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
-    "npm": "2.x || 3.x"
+    "npm": "3.x"
   }
 }
