--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "no-extra-boolean-cast": 0,
     "import/prefer-default-export": 0,
     "react/no-find-dom-node": 0,
+    "react/require-extension": "off"
   },
 
   "plugins": [
