--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "source-map-support": "^0.4.3"
   },
   "devEngines": {
-    "node": "4.x || 5.x || 6.x",
-    "npm": "3.x"
+    "node": "4.x || 5.x || 6.x || 7.x",
+    "npm": "3.x || 4.x"
   }
 }
