--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
     "no-inner-declarations": 1,
     "no-invalid-regexp": 1,
     "no-negated-in-lhs": 2,
-    "no-else-return": 1,
+    "no-else-return": 0,
     "import/no-unresolved": [2, { ignore: ['electron'] }],
     "react/jsx-no-bind": 1,
     "react/prefer-stateless-function": 1,
@@ -34,7 +34,12 @@
     "no-extra-boolean-cast": 2,
     "import/prefer-default-export": 2,
     "react/no-find-dom-node": 1,
-    "react/require-extension": "off"
+    "react/require-extension": "off",
+    'react/no-unused-prop-types': ['error', {
+      customValidators: [
+      ],
+      skipShapeProps: true,
+    }],
   },
 
   "plugins": [
