--- a/package.json
+++ b/package.json
@@ -44,94 +44,94 @@
   ],
   "homepage": "https://github.com/UniSiegenCSCW/remotino",
   "devDependencies": {
-    "node-sass": "^3.8.0",
-    "sass-loader": "^3.2.0",
-    "file-loader": "^0.8.5",
-    "asar": "^0.12.3",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-tcomb": "^0.3.17",
-    "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.16.3",
-    "boiler-room-custodian": "^0.4.2",
-    "chai": "^3.5.0",
-    "concurrently": "^3.1.0",
-    "cross-env": "^3.1.1",
-    "css-loader": "^0.25.0",
-    "del": "^2.2.2",
-    "devtron": "^1.3.0",
-    "electron": "^1.4.3",
-    "electron-devtools-installer": "^2.0.1",
-    "electron-packager": "^8.1.0",
-    "electron-rebuild": "^1.2.1",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-formatter-pretty": "^1.0.0",
-    "eslint-import-resolver-webpack": "^0.6.0",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-flowtype-errors": "^1.3.1",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-mocha": "^4.6.0",
-    "eslint-plugin-react": "^6.3.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs-scripts": "^0.7.1",
-    "jsdom": "^9.6.0",
-    "json-loader": "^0.5.4",
-    "minimist": "^1.2.0",
-    "mocha": "^3.1.0",
-    "node-libs-browser": "^1.0.0",
-    "react-addons-test-utils": "^15.3.2",
-    "redux-logger": "^2.7.0",
-    "sinon": "^1.17.6",
-    "spectron": "^3.4.0",
-    "style-loader": "^0.13.1",
-    "tcomb": "^3.2.15",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1",
-    "webpack-validator": "^2.2.9"
+    "node-sass": "4.5.3",
+    "sass-loader": "6.0.6",
+    "file-loader": "0.8.5",
+    "asar": "0.12.3",
+    "babel-core": "6.17.0",
+    "babel-eslint": "7.0.0",
+    "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-dev-expression": "0.2.1",
+    "babel-plugin-tcomb": "0.3.17",
+    "babel-plugin-webpack-loaders": "0.8.0",
+    "babel-polyfill": "6.16.0",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-react-optimize": "1.0.1",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-register": "6.16.3",
+    "boiler-room-custodian": "0.4.2",
+    "chai": "3.5.0",
+    "concurrently": "3.1.0",
+    "cross-env": "3.1.1",
+    "css-loader": "0.25.0",
+    "del": "2.2.2",
+    "devtron": "1.3.0",
+    "electron": "1.4.15",
+    "electron-devtools-installer": "2.0.1",
+    "electron-packager": "8.1.0",
+    "electron-rebuild": "1.2.1",
+    "enzyme": "2.4.1",
+    "eslint": "3.7.1",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-formatter-pretty": "1.0.0",
+    "eslint-import-resolver-webpack": "0.6.0",
+    "eslint-loader": "1.5.0",
+    "eslint-plugin-flowtype-errors": "1.3.1",
+    "eslint-plugin-import": "2.0.0",
+    "eslint-plugin-jsx-a11y": "2.2.2",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-mocha": "4.6.0",
+    "eslint-plugin-react": "6.3.0",
+    "express": "4.14.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "fbjs-scripts": "0.7.1",
+    "jsdom": "9.6.0",
+    "json-loader": "0.5.4",
+    "minimist": "1.2.0",
+    "mocha": "3.1.0",
+    "node-libs-browser": "1.0.0",
+    "react-addons-test-utils": "15.3.2",
+    "redux-logger": "2.7.0",
+    "sinon": "1.17.6",
+    "spectron": "3.4.0",
+    "style-loader": "0.13.1",
+    "tcomb": "3.2.15",
+    "webpack": "1.13.2",
+    "webpack-dev-middleware": "1.8.3",
+    "webpack-hot-middleware": "2.12.2",
+    "webpack-merge": "0.14.1",
+    "webpack-validator": "2.2.9"
   },
   "dependencies": {
-    "counterpart": "^0.17.5",
-    "vis": "^4.16.1",
-    "johnny-five": "0.10.0",
-    "ramda": "^0.21.0",
-    "rd3": "^0.6.3",
-    "d3": "^3.5.17",
-    "react-syntax-highlighter": "^2.3.0",
-    "react-translate-component": "^0.13.0",
-    "react-interpolate-component": "^0.10.0",
-    "css-modules-require-hook": "^4.0.1",
-    "electron-debug": "^1.0.1",
-    "react-fontawesome": "^1.1.0",
-    "jsonfile": "^2.3.1",
-    "css-modules-require-hook": "^4.0.5",
-    "electron-debug": "^1.0.1",
-    "font-awesome": "^4.6.3",
-    "postcss": "^5.2.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.6",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "serialport": "^4.0.3",
-    "source-map-support": "^0.4.3"
+    "counterpart": "0.17.5",
+    "vis": "4.16.1",
+    "johnny-five": "0.11.1",
+    "ramda": "0.21.0",
+    "rd3": "0.6.3",
+    "d3": "3.5.17",
+    "react-syntax-highlighter": "2.3.0",
+    "react-translate-component": "0.13.0",
+    "react-interpolate-component": "0.10.0",
+    "css-modules-require-hook": "4.0.1",
+    "electron-debug": "1.0.1",
+    "react-fontawesome": "1.1.0",
+    "jsonfile": "2.3.1",
+    "css-modules-require-hook": "4.0.5",
+    "electron-debug": "1.0.1",
+    "font-awesome": "4.6.3",
+    "postcss": "5.2.4",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-redux": "4.4.5",
+    "react-router": "2.8.1",
+    "react-router-redux": "4.0.6",
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
+    "serialport": "4.0.7",
+    "source-map-support": "0.4.3"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
